Remove SouthboundProvider.db
We have access to the properly-injected DataBroker, used that instead of
the static field.

Also fixes some cases where we access DTO properties multiple times.

JIRA: OVSDB-468
Change-Id: I328b59c8027e27512ae14d451b372c1a1b664608
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>